--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
   "name": "logmein-client-auth",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "homepage": "https://github.com/activems/logmein-client-auth",
   "authors": [
     "ArturoBlas <arturoblas@gmail.com>"
   ],
   "description": "LogmeIn OAuth2.0 client authorization library",
-  "main": "lib/main.lib",
+  "main": "lib/main.js",
   "keywords": [
     "OAuth",
     "OAuth2.0",
@@ -18,10 +18,13 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "build"
   ],
   "dependencies": {
-    "require-cs": "~0.5.0",
     "http": "~3.24.10"
+  },
+  "devDependencies": {
+    "jasmine-given": "~2.6.2"
   }
 }
